fix resume line spacing

--- a/css/esklarski.github.io.css
+++ b/css/esklarski.github.io.css
@@ -12,7 +12,7 @@ ul {
 ul ul {
     list-style: none;
     line-height: 1;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 hr {
